# CityCatalyst

./: .cursorignore  .dockerignore  .env.example  .gitignore  .linear.toml  .replit  AGENTS.md  ActivityData.sql  CHANGELOG.md  CHANGES-stationary-energy-demo.md  CHANGES-vs-ON-5782.md  Components.md  DEPLOYMENT_WRAPPER_DOCUMENTATION.md  DEPLOYMENT_WRAPPER_GUIDE.md  DataSource.sql  DataSourceActivityData.sql  DataSourceGHGs.sql  DataSourceReportingLevel.sql  DataSourceSector.sql  DataSourceSubSector.sql  Dockerfile  EmissionsFactor.sql  GHGs.sql  Methodology.sql  POC_Transportation.ipynb  README.md  Scope.sql  a2as.yaml  actions.csv  actions_all.csv  api.py  cities.csv  deploy.sh  docker-compose.yml  error_fixed.md  extractor.py  generic_output_schema.json  graph_definition.py  info_vectorstore.py  local_call.py  (+17 more)
climate-advisor/: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  __init__.py  architecture.md  architecture_implementation_plan.md  docker-compose.yml  llm_config.yaml  prompt_suggestion.md  pyproject.toml  setup.sh
climate-advisor/docs/: CC-CA-communication-implementation.md  QUICK_REFERENCE.md  architecture.md  cc_ca_markdown_output_schema_contract.md  climate-advisor-openapi.yaml  implementation_plan.md  pdf-ocr-markdown-architecture.md  tools_copy.md
climate-advisor/k8s/: db-configmap-dev.yml  db-configmap-prod.yml  db-configmap-test.yml  deployment-dev.yml  deployment-prod.yml  deployment-test.yml  migrate-dev.yml  migrate-prod.yml  migrate-test.yml  service-dev.yml  service-prod.yml  service-test.yml
climate-advisor/prompts/: chat.md  cnb_funder_identity_matching.md  cnb_funding_opportunity_research.md  cnb_similar_project_matching.md  core.md  data_analysis.md  default.md  inventory_bulk_filler.md  inventory_context.md  stationary_energy_draft.md  stationary_energy_draft_generation.md  stationary_energy_review.md
climate-advisor/scripts/: __init__.py  check_user_inventories.py  init_database.py  mint_ca_e2e_token.py  setup_database.py  setup_database.sql  setup_db_in_container.py  setup_local_db.py  test_service_stream.py
climate-advisor/service/: Dockerfile  __init__.py  alembic.ini  migrate.py  pytest.ini  requirements.txt
climate-advisor/tmp/: start-ca.ps1
climate-advisor/vector_db/: README.md  alembic.ini  config_loader.py  embedding_config.yml  migrate.py  upload_to_db.py  vector_init.py
global-api/: . gitignore  .gitignore  Dockerfile  README.md  alembic.ini  check_ef_formulavalues_route.py  database_init.py  docker-compose.yml  import_argentiniandatasets.sh  import_everything.sh  main.py  pyproject.toml  requirements.txt  sample.env  settings.py  start.sh
global-api/data-coverage/: data-coverage.py  data-coverage.sql  locodes.txt  pivot-data-coverage.py
global-api/data-model/: README.md
global-api/db/: database.py  dependencies.py  provenance.py
global-api/dockerfiles/: be.Dockerfile
global-api/engineering-standards/: api-design.md  api-response-semantics.md  data-model-design.md
global-api/examples/: IMPLEMENTATION_SUMMARY.md  README.md  demo_validation.py  validate_ghg_data.py
global-api/importer/: README.md  climatetrace_importer.py  import_everything.sh  lat_lon_to_locode.py  osm_importer.py
global-api/importer-mage/: .gitignore  2021_raw_energy_balances_AR.xlsx  2022_raw_energy_balances_AR.xlsx  Dockerfile  README  dev.env  docker-compose.yml
global-api/migrations/: env.py
global-api/models/: datasource.py  osm.py
global-api/routes/: actions_pathway.py  catalogue_endpoint.py  catalogue_last_update_endpoint.py  ccra_assessment.py  cities_search.py  city_action_finance_detail.py  city_action_financial_feasibility.py  city_action_mitigation_feasibility_scores.py  city_adapta_risk.py  city_attribute.py  city_boundaries_endpoint.py  city_context.py  city_finance_projects.py  city_locode_endpoint  city_locode_endpoint.py  city_locode_endpoint_crosswalk.py  city_locode_endpoint_edgar.py  city_locode_endpoint_ghgrp.py  city_locode_endpoint_mendoza_stationary_energy.py  city_locode_endpoint_transportation_googleEIE.py  citywide_emission_endpoint.py  country_code_IEA_energy.py  country_code_endpoint.py  emissionfactor_datasource_endpoint.py  emissionfactor_emissionfactor_datasource_endpoint.py  emissionfactor_emissionsfactor_endpoint.py  emissionfactor_methodology_endpoint.py  emissionfactor_publisher_endpoint.py  finance_opportunities.py  formulainput_datasource_endpoint.py  formulainput_formulainput_datasource_endpoint.py  formulainput_formulainput_endpoint.py  formulainput_methodology_endpoint.py  formulainput_publisher_endpoint.py  get_climate_actions.py  ghgi_emission_forecast.py  ghgi_emissions.py  ghgi_notation_key.py  health.py  main.py  (+5 more)
global-api/schema/: asset.py  crosswalk_grid.py
global-api/schemas/: v2.py
global-api/scripts/: generate_schema.py
global-api/tests/: test_ccra_assessment.py  test_cities_search.py  test_city_adapta_risk.py  test_city_context.py  test_country_code_endpoint.py  test_data_validation.py  test_emissionfactor_endpoints.py  test_finance_opportunities.py  test_finance_projects.py  test_ghgi_emission_forecast.py  test_ghgi_emissions.py  test_main.py  test_nbs_geospatial_endpoints.py  test_policy_signals.py  test_population_endpoint.py  test_projects.py
global-api/utils/: data_validation.py  helpers.py
hiap/: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  audit_anchor_vs_pairwise.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
hiap-meed/: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Implementation-plan-hard-filter.md  Implementation-plan-impact.md  README.md  compose.yaml  docker_startup.sh  future-work.md  implementation-plan-alignment-feasability.md  implementation-plan-output-report.md  implementation-plan_.md  implementation-plan_5aa94eba.plan.md  llm_config.yaml  pyproject.toml  pytest.ini
hiap-meed/app/: __init__.py  main.py  run.sh
hiap-meed/docs/: detailed-block-architecture.md  highlevel-architecture.md  implementation-plan.md  methodology-variants-and-migration.md  (+5 more)
(+5155 files in other folders)
