[project]
name = "climate-advisor"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.38.0",
    "aiosqlite==0.21.0",
    "alembic==1.17.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "distro==1.9.0",
    "greenlet==3.2.4",
    "griffe==1.14.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.15",
    "iniconfig==2.3.0",
    "jiter==0.11.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "langchain-text-splitters==1.1.2",
    "langsmith==0.8.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "mcp==1.23.0",
    "numpy==2.4.4",
    "openai==2.32.0",
    "openai-agents==0.13.6",
    "orjson==3.11.6",
    "ormsgpack==1.12.2",
    "packaging==25.0",
    "pgvector==0.4.1",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "PyJWT==2.10.1",
    "PyPDF2==3.0.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "PyYAML==6.0.3",
    "referencing==0.37.0",
    "regex==2026.5.9",
    "requests==2.33.0",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.28.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.45",
    "sse-starlette==3.0.3",
    "starlette==0.49.1",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "types-requests==2.32.4.20250913",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
    "uuid_utils==0.13.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[tool.uv]
package = false
