[tool.poetry]
name = "global-api"
version = "0.1.0"
description = "This is the Global API server used by CityCatalyst for accessing data from services that don't have a public API."
authors = ["Pravee Singh <ratinsingh23@gmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pandas = "^2.1.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
geopandas = "^0.13.2"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
osmnx = "^1.6.0"
shapely = "^2.0.1"
asyncpg = "^0.28.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
ipython = "^8.15.0"
isort = "^5.12.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
