[project]
name = "hiap-meed"
version = "0.1.0"
description = "MEED+ prioritization engine: scores and ranks city climate actions across impact, alignment, and feasibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.37.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
