[project]
name = "hiap-meed"
version = "0.1.0"
description = "MEED+ prioritization engine: scores and ranks city climate actions across impact, alignment, and feasibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.42",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "mlflow-skinny>=3.14.0",
    "numpy>=2.5.1",
    "pandas>=2.0.0",
    "openai>=2.44.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
