[project]
name = "hiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.88",
    "chromadb>=1.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-openai>=0.3.34",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "langgraph-checkpoint>=4.0.2",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.3.13",
    "langsmith>=0.7.30",
    "limits>=5.6.0",
    "openai>=2.0.0",
    "pandas>=3.0.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.37.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "pytest>=8.4.2",
]
