[project]
name = "hiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.8",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.3.30",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.0.2",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.8.4",
    "limits>=5.6.0",
    "openai>=2.36.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "pytest>=9.0.3",
]
