[project]
name = "hiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.8",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.0.2",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.4.2",
    "langsmith>=0.8.18",
    "limits>=5.8.0",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "slowapi>=0.1.9",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "pytest>=9.0.3",
]
